--- a/main.ipynb
+++ b/main.ipynb
@@ -3,12 +3,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "id": "Vt9t7-fVi8At"
    },
    "source": [
     "# Machine Learning - Final Project\n",
-    "## Credit Fraud Detection\n",
+    "## Accident Severity Prediction\n",
     "**Team**: *Jennifer Lord, Konstantinos Georgiou, Russ Limber, Sanjeev Singh, Sara Howard*"
    ]
   },
@@ -19,15 +18,15 @@
    },
    "source": [
     "## Where to put the code\n",
-    "- Place the preprocessing functions/classes in [\\<project root\\>/project_libs/project/preprocessing.py](https://github.com/UTK-ML-Dream-Team/credit-fraud-detection/blob/master/project_libs/project/preprocessing.py)\n",
-    "- The models in [\\<project root\\>/project_libs/project/models.py](https://github.com/UTK-ML-Dream-Team/credit-fraud-detection/blob/master/project_libs/project/models.py)\n",
-    "- Any plotting related functions in [\\<project root\\>/project_libs/project/plotter.py](https://github.com/UTK-ML-Dream-Team/credit-fraud-detection/blob/master/project_libs/project/plotter.py)\n",
+    "- Place the preprocessing functions/classes in [\\<project root\\>/project_libs/project/preprocessing.py](https://github.com/UTK-ML-Dream-Team/accident-severity-prediction/blob/master/project_libs/project/preprocessing.py)\n",
+    "- The models in [\\<project root\\>/project_libs/project/models.py](https://github.com/UTK-ML-Dream-Team/accident-severity-prediction/blob/master/project_libs/project/models.py)\n",
+    "- Any plotting related functions in [\\<project root\\>/project_libs/project/plotter.py](https://github.com/UTK-ML-Dream-Team/accident-severity-prediction/blob/master/project_libs/project/plotter.py)\n",
     "\n",
     "\n",
     "**The code is reloaded automatically. Any class object needs to reinitialized though.** \n",
     "\n",
     "## Config file\n",
-    "The yml/config file is located at: [confs/prototype1.yml](https://github.com/UTK-ML-Dream-Team/credit-fraud-detection/blob/master/confs/prototype1.yml)<br>\n",
+    "The yml/config file is located at: [confs/prototype1.yml](https://github.com/UTK-ML-Dream-Team/accident-severity-prediction/blob/master/confs/prototype1.yml)<br>\n",
     "To load it run:\n",
     "```python\n",
     "config_path='confs/prototype1.yml'\n",
@@ -46,8 +45,8 @@
     "- project_libs/**fancy_logger**: Logger that can be used instead of prints for text formatting (color, bold, underline etc)\n",
     "\n",
     "## For more info check out:\n",
-    "- the **[Project Board](https://github.com/UTK-ML-Dream-Team/credit-fraud-detection/projects/1)**\n",
-    "- and the **[Current Issues](https://github.com/UTK-ML-Dream-Team/credit-fraud-detection/issues)**"
+    "- the **[Project Board](https://github.com/UTK-ML-Dream-Team/accident-severity-prediction/projects/1)**\n",
+    "- and the **[Current Issues](https://github.com/UTK-ML-Dream-Team/accident-severity-prediction/issues)**"
    ]
   },
   {
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -87,31 +86,7 @@
     "id": "1SQIWYWmi8A4",
     "outputId": "9832cee7-6841-41cc-ef30-3bbf97b720d3"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clone project?\n",
-      "(If you do this you will ovewrite local changes on other files e.g. configs)\n",
-      "Not needed if you're not on Google Collab\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d72064f908d4ccbb00e1680dea6508b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Yes, clone', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import Jupyter Widgets\n",
     "import os\n",
@@ -121,7 +96,7 @@
     "# Clone the repository if you're in Google Collab\n",
     "def clone_project(is_collab: bool = False):\n",
     "    print(\"Cloning Project..\")\n",
-    "    !git clone https://github.com/UTK-ML-Dream-Team/credit-fraud-detection.git\n",
+    "    !git clone https://github.com/UTK-ML-Dream-Team/accident-severity-prediction.git\n",
     "    print(\"Project cloned.\")\n",
     "       \n",
     "print(\"Clone project?\")\n",
@@ -134,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -149,35 +124,13 @@
     "id": "F_l8p4H1i8A5",
     "outputId": "8e4174bb-ba13-4f22-b2d6-f5045de58d9e"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Are you on Google Collab?\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "453f401c0f25487197206791151cb3af",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Yes', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Clone the repository if you're in Google Collab\n",
     "def change_dir(is_collab: bool = False):\n",
     "    try:\n",
     "        print(\"Changing dir..\")\n",
-    "        os.chdir('/content/credit-fraud-detection')\n",
+    "        os.chdir('/content/accident-severity-prediction')\n",
     "        print('done')\n",
     "        print(\"Current dir:\")\n",
     "        print(os.getcwd())\n",
@@ -236,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -244,16 +197,7 @@
     "id": "wjKYGxzYi8A9",
     "outputId": "185d3c02-7723-4c5d-a58a-69a2eff4462f"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Imports\n",
     "%load_ext autoreload\n",
@@ -281,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "id": "-z773EjNgSdk"
    },
@@ -292,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -300,16 +244,7 @@
     "id": "XYH2o7w3i8A-",
     "outputId": "48016d05-91df-462d-9f73-87d98d66a375"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-11-02 23:22:44 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /Users/gkos/PycharmProjects/credit-fraud-detection/confs/prototype1.yml\u001b[0m\n",
-      "2021-11-02 23:22:44 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: prototype_1\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The path of configuration and log save path\n",
     "config_path = \"confs/prototype1.yml\"\n",
@@ -333,24 +268,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "id": "qud5K8LkgSdl",
     "outputId": "c6c29b9a-7dd6-4016-a608-3577d6e66cff"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-11-02 23:21:21 FancyLogger  INFO     \u001b[1m\u001b[37mLogger is set. Log file path: /Users/gkos/PycharmProjects/credit-fraud-detection/logs/prototype1.log\u001b[0m\n",
-      "2021-11-02 23:21:21 Notebook     INFO     \u001b[1m\u001b[36mLogger Examples:\u001b[0m\n",
-      "\n",
-      "2021-11-02 23:21:21 Notebook     WARNING  \u001b[4m\u001b[36mLogger Warning underlined\u001b[0m\n",
-      "2021-11-02 23:21:21 Notebook     ERROR    \u001b[1m\u001b[41m\u001b[33mLogger Error in red&yellow\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from project_libs import ColorizedLogger\n",
     "log_path = \"logs/prototype1.log\"\n",
@@ -386,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "id": "CuYpT_rqgSdl"
    },
@@ -406,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "id": "qpxXezwmgSdm"
    },
@@ -449,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "id": "gRUrrWe7gSdq"
    },
@@ -485,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,190 +563,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
-  },
-  "widgets": {
-   "application/vnd.jupyter.widget-state+json": {
-    "1731d42a04634fee89c2f80c12a29c88": {
-     "model_module": "@jupyter-widgets/base",
-     "model_module_version": "1.2.0",
-     "model_name": "LayoutModel",
-     "state": {
-      "_model_module": "@jupyter-widgets/base",
-      "_model_module_version": "1.2.0",
-      "_model_name": "LayoutModel",
-      "_view_count": null,
-      "_view_module": "@jupyter-widgets/base",
-      "_view_module_version": "1.2.0",
-      "_view_name": "LayoutView",
-      "align_content": null,
-      "align_items": null,
-      "align_self": null,
-      "border": null,
-      "bottom": null,
-      "display": null,
-      "flex": null,
-      "flex_flow": null,
-      "grid_area": null,
-      "grid_auto_columns": null,
-      "grid_auto_flow": null,
-      "grid_auto_rows": null,
-      "grid_column": null,
-      "grid_gap": null,
-      "grid_row": null,
-      "grid_template_areas": null,
-      "grid_template_columns": null,
-      "grid_template_rows": null,
-      "height": null,
-      "justify_content": null,
-      "justify_items": null,
-      "left": null,
-      "margin": null,
-      "max_height": null,
-      "max_width": null,
-      "min_height": null,
-      "min_width": null,
-      "object_fit": null,
-      "object_position": null,
-      "order": null,
-      "overflow": null,
-      "overflow_x": null,
-      "overflow_y": null,
-      "padding": null,
-      "right": null,
-      "top": null,
-      "visibility": null,
-      "width": null
-     }
-    },
-    "5f7a290065d24765a0bc5fa9801fd815": {
-     "model_module": "@jupyter-widgets/controls",
-     "model_module_version": "1.5.0",
-     "model_name": "ButtonStyleModel",
-     "state": {
-      "_model_module": "@jupyter-widgets/controls",
-      "_model_module_version": "1.5.0",
-      "_model_name": "ButtonStyleModel",
-      "_view_count": null,
-      "_view_module": "@jupyter-widgets/base",
-      "_view_module_version": "1.2.0",
-      "_view_name": "StyleView",
-      "button_color": null,
-      "font_weight": ""
-     }
-    },
-    "a5b00bcabdfc42c480043de40a36c486": {
-     "model_module": "@jupyter-widgets/base",
-     "model_module_version": "1.2.0",
-     "model_name": "LayoutModel",
-     "state": {
-      "_model_module": "@jupyter-widgets/base",
-      "_model_module_version": "1.2.0",
-      "_model_name": "LayoutModel",
-      "_view_count": null,
-      "_view_module": "@jupyter-widgets/base",
-      "_view_module_version": "1.2.0",
-      "_view_name": "LayoutView",
-      "align_content": null,
-      "align_items": null,
-      "align_self": null,
-      "border": null,
-      "bottom": null,
-      "display": null,
-      "flex": null,
-      "flex_flow": null,
-      "grid_area": null,
-      "grid_auto_columns": null,
-      "grid_auto_flow": null,
-      "grid_auto_rows": null,
-      "grid_column": null,
-      "grid_gap": null,
-      "grid_row": null,
-      "grid_template_areas": null,
-      "grid_template_columns": null,
-      "grid_template_rows": null,
-      "height": null,
-      "justify_content": null,
-      "justify_items": null,
-      "left": null,
-      "margin": null,
-      "max_height": null,
-      "max_width": null,
-      "min_height": null,
-      "min_width": null,
-      "object_fit": null,
-      "object_position": null,
-      "order": null,
-      "overflow": null,
-      "overflow_x": null,
-      "overflow_y": null,
-      "padding": null,
-      "right": null,
-      "top": null,
-      "visibility": null,
-      "width": null
-     }
-    },
-    "c55ebd5855ca490791c5d6b9308b6d4e": {
-     "model_module": "@jupyter-widgets/controls",
-     "model_module_version": "1.5.0",
-     "model_name": "ButtonModel",
-     "state": {
-      "_dom_classes": [],
-      "_model_module": "@jupyter-widgets/controls",
-      "_model_module_version": "1.5.0",
-      "_model_name": "ButtonModel",
-      "_view_count": null,
-      "_view_module": "@jupyter-widgets/controls",
-      "_view_module_version": "1.5.0",
-      "_view_name": "ButtonView",
-      "button_style": "",
-      "description": "Yes",
-      "disabled": false,
-      "icon": "",
-      "layout": "IPY_MODEL_a5b00bcabdfc42c480043de40a36c486",
-      "style": "IPY_MODEL_5f7a290065d24765a0bc5fa9801fd815",
-      "tooltip": ""
-     }
-    },
-    "e7b4d0dcb1f24d998063f877d1efbca7": {
-     "model_module": "@jupyter-widgets/controls",
-     "model_module_version": "1.5.0",
-     "model_name": "ButtonModel",
-     "state": {
-      "_dom_classes": [],
-      "_model_module": "@jupyter-widgets/controls",
-      "_model_module_version": "1.5.0",
-      "_model_name": "ButtonModel",
-      "_view_count": null,
-      "_view_module": "@jupyter-widgets/controls",
-      "_view_module_version": "1.5.0",
-      "_view_name": "ButtonView",
-      "button_style": "",
-      "description": "Yes, clone",
-      "disabled": false,
-      "icon": "",
-      "layout": "IPY_MODEL_1731d42a04634fee89c2f80c12a29c88",
-      "style": "IPY_MODEL_f7b19456e9b94ee09f8ed14cc1ba960b",
-      "tooltip": ""
-     }
-    },
-    "f7b19456e9b94ee09f8ed14cc1ba960b": {
-     "model_module": "@jupyter-widgets/controls",
-     "model_module_version": "1.5.0",
-     "model_name": "ButtonStyleModel",
-     "state": {
-      "_model_module": "@jupyter-widgets/controls",
-      "_model_module_version": "1.5.0",
-      "_model_name": "ButtonStyleModel",
-      "_view_count": null,
-      "_view_module": "@jupyter-widgets/base",
-      "_view_module_version": "1.2.0",
-      "_view_name": "StyleView",
-      "button_color": null,
-      "font_weight": ""
-     }
-    }
-   }
   }
  },
  "nbformat": 4,
