changes to notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -307,8 +307,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-11-16 18:47:35 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /Users/gkos/Insync/delfinas7kostas@gmail.com/Google Drive/Projects/UTK/accident-severity-detection-prediction/confs/prototype1.yml\u001b[0m\n",
-      "2021-11-16 18:47:35 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: prototype_1\u001b[0m\n"
+      "2021-11-16 18:53:07 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /Users/gkos/Insync/delfinas7kostas@gmail.com/Google Drive/Projects/UTK/accident-severity-detection-prediction/confs/prototype1.yml\u001b[0m\n",
+      "2021-11-16 18:53:07 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: prototype_1\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'city_list': ['Phoenix', 'Los Angeles', 'New York', 'Philadelphia', 'Houston', 'Chicago'], 'state_list': ['AZ', 'CA', 'NY', 'PA', 'TX', 'IL'], 'env_vars': ['Weather_Timestamp', 'Temperature(F)', 'Wind_Chill(F)', 'Humidity(%)', 'Pressure(in)', 'Visibility(mi)', 'Wind_Direction', 'Wind_Speed(mph)', 'Precipitation(in)', 'Weather_Condition', 'Sunrise_Sunset', 'Civil_Twilight', 'Nautical_Twilight', 'Astronomical_Twilight']}\n"
      ]
     }
    ],
@@ -978,7 +985,7 @@
     "# Isolate city state\n",
     "city_list = preprocessing_config['city_list']\n",
     "state_list = preprocessing_config['state_list']\n",
-    "accidents_df = pre.isolate_city_state(accidents_df_pre_1, city_list, state_list)\n",
+    "accidents_df_pre_1 = pre.isolate_city_state(accidents_df_pre_1, city_list, state_list)\n",
     "display(accidents_df)"
    ]
   },
@@ -1081,7 +1088,7 @@
     "print('Percent of missing rows by column', '\\n\\n', accidents_df_pre_2.isnull().sum()/len(accidents_df_pre_2))\n",
     "\n",
     "temp_wind = pre.subset_df(accidents_df_pre_2, ['Temperature(F)', 'Wind_Speed(mph)'])\n",
-    "OLS(temp_wind, np.array(accidents_df_pre_2['Wind_Chill(F)']))\n",
+    "pre.OLS(temp_wind, np.array(accidents_df_pre_2['Wind_Chill(F)']))\n",
     "\n",
     "accidents_df_pre_2['Wind_Chill(F)'].fillna((accidents_df_pre_2['Temperature(F)']*1.0778 + accidents_df_pre_2['Wind_Speed(mph)']*-0.7083), inplace=True)\n",
     "\n",
