--- a/main.ipynb
+++ b/main.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -244,7 +244,16 @@
     "id": "wjKYGxzYi8A9",
     "outputId": "185d3c02-7723-4c5d-a58a-69a2eff4462f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Imports\n",
     "%load_ext autoreload\n",
@@ -274,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "id": "-z773EjNgSdk"
    },
@@ -285,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -298,8 +307,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-11-17 11:55:11 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /Users/gkos/Insync/delfinas7kostas@gmail.com/Google Drive/Projects/UTK/accident-severity-detection-prediction/confs/prototype1.yml\u001b[0m\n",
-      "2021-11-17 11:55:11 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: prototype_1\u001b[0m\n"
+      "2021-11-17 13:53:48 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /Users/sanjeevsingh/Dropbox/Courses/COSC522/FinalProject/accident-severity-prediction/confs/prototype1.yml\u001b[0m\n",
+      "2021-11-17 13:53:48 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: prototype_1\u001b[0m\n"
      ]
     }
    ],
@@ -336,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "id": "CuYpT_rqgSdl"
    },
@@ -356,20 +365,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mkdir: /Users/gkos/.kaggle: File exists\n",
+      "mkdir: /Users/sanjeevsingh/.kaggle: File exists\n",
       "mkdir: data: File exists\n",
-      "Downloading us-accidents.zip to /Users/gkos/Insync/delfinas7kostas@gmail.com/Google Drive/Projects/UTK/accident-severity-detection-prediction/data\n",
-      " 99%|███████████████████████████████████████▌| 116M/117M [00:08<00:00, 14.0MB/s]\n",
-      "100%|████████████████████████████████████████| 117M/117M [00:08<00:00, 14.4MB/s]\n",
-      "Archive:  us-accidents.zip\n",
-      "  inflating: US_Accidents_Dec20_updated.csv  \n"
+      "zsh:1: command not found: kaggle\n"
      ]
     }
    ],
@@ -387,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {
     "id": "qpxXezwmgSdm"
    },
@@ -414,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {
     "id": "gRUrrWe7gSdq"
    },
@@ -623,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "id": "jidzZ38HgSds"
    },
@@ -1028,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1060,7 +1065,7 @@
       "Model:                            OLS   Adj. R-squared (uncentered):              0.999\n",
       "Method:                 Least Squares   F-statistic:                          2.042e+07\n",
       "Date:                Wed, 17 Nov 2021   Prob (F-statistic):                        0.00\n",
-      "Time:                        11:55:37   Log-Likelihood:                     -1.2984e+05\n",
+      "Time:                        14:06:59   Log-Likelihood:                     -1.2984e+05\n",
       "No. Observations:               56661   AIC:                                  2.597e+05\n",
       "Df Residuals:                   56659   BIC:                                  2.597e+05\n",
       "Df Model:                           2                                                  \n",
@@ -1142,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1150,24 +1155,72 @@
      "output_type": "stream",
      "text": [
       "Number of missing rows by column \n",
-      " Traffic_Signal     0\n",
-      "Crossing           0\n",
-      "Station            0\n",
-      "Amenity            0\n",
-      "Bump               0\n",
-      "Give_Way           0\n",
-      "Junction           0\n",
-      "No_Exit            0\n",
-      "Railway            0\n",
-      "Roundabout         0\n",
-      "Stop               0\n",
-      "Traffic_Calming    0\n",
-      "Turning_Loop       0\n",
-      "dtype: int64\n",
-      "Index(['Severity', 'Start_Time', 'End_Time', 'Distance(mi)', 'Description',\n",
-      "       'Start_Lat', 'Start_Lng', 'Street', 'Side', 'City', 'County',\n",
-      "       'Timezone'],\n",
-      "      dtype='object')\n"
+      " Weather_Timestamp          722\n",
+      "Temperature(F)               0\n",
+      "Wind_Chill(F)                0\n",
+      "Humidity(%)                  0\n",
+      "Pressure(in)                 0\n",
+      "Visibility(mi)               0\n",
+      "Wind_Direction            1590\n",
+      "Wind_Speed(mph)              0\n",
+      "Precipitation(in)            0\n",
+      "Weather_Condition          879\n",
+      "Sunrise_Sunset               0\n",
+      "Civil_Twilight               0\n",
+      "Nautical_Twilight            0\n",
+      "Astronomical_Twilight        0\n",
+      "ID                           0\n",
+      "Severity                     0\n",
+      "Start_Time                   0\n",
+      "End_Time                     0\n",
+      "Distance(mi)                 0\n",
+      "Description                  0\n",
+      "Start_Lat                    0\n",
+      "Start_Lng                    0\n",
+      "End_Lat                      0\n",
+      "End_Lng                      0\n",
+      "Number                   67960\n",
+      "Street                       0\n",
+      "Side                         0\n",
+      "City                         0\n",
+      "County                       0\n",
+      "State                        0\n",
+      "Zipcode                      0\n",
+      "Country                      0\n",
+      "Timezone                     0\n",
+      "Airport_Code                 0\n",
+      "Traffic_Signal               0\n",
+      "Crossing                     0\n",
+      "Station                      0\n",
+      "Amenity                      0\n",
+      "Bump                         0\n",
+      "Give_Way                     0\n",
+      "Junction                     0\n",
+      "No_Exit                      0\n",
+      "Railway                      0\n",
+      "Roundabout                   0\n",
+      "Stop                         0\n",
+      "Traffic_Calming              0\n",
+      "Turning_Loop                 0\n",
+      "dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sanjeevsingh/Dropbox/Courses/COSC522/FinalProject/accident-severity-prediction/project_libs/project/preprocessing.py:198: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X_train[feature] = X_train[feature].apply(lambda x: (x - mu) / sigma)\n",
+      "/Users/sanjeevsingh/Dropbox/Courses/COSC522/FinalProject/accident-severity-prediction/project_libs/project/preprocessing.py:199: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X_test[feature] = X_test[feature].apply(lambda x: (x - mu) / sigma)\n"
      ]
     }
    ],
@@ -1177,22 +1230,20 @@
     "# Create a copy of the df\n",
     "accidents_df_sanjeev = accidents_df_isolated.copy()\n",
     "\n",
+    "# Filter the infra variables\n",
     "infra_vars = preprocessing_config['infra_vars']\n",
     "accidents_df_infra = accidents_df_isolated[infra_vars].copy()\n",
-    "print('Number of missing rows by column', '\\n', accidents_df_infra.isnull().sum())\n",
     "\n",
+    "# Filter location and basic variables\n",
+    "accidents_df_sanjeev = pre.filter_loc_basic_var(accidents_df_sanjeev)\n",
     "\n",
-    "# There is no missing value and duplicated meaing variables, all of the infra structures variables would be used. \n",
-    "accidents_df_sanjeev = pre.preprocess_loc_basic_var(accidents_df_sanjeev)\n",
-    "print(accidents_df_sanjeev.columns)"
+    "# Combine all Russ, Sanjeev, and Infra DF\n",
+    "X_raw = pd.concat([accidents_df_russ, accidents_df_sanjeev, accidents_df_infra], axis=1)\n",
+    "print('X_raw: Number of missing rows by column', '\\n', X_raw.isnull().sum())\n",
+    "\n",
+    "# Standardize, Encode, Extract and Split Train/Test\n",
+    "X_train, X_test, y_train, y_test = encode_std_extract_split(X_raw)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1345,7 +1396,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1359,7 +1410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
