--- a/main.ipynb
+++ b/main.ipynb
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {
     "id": "jidzZ38HgSds"
    },
@@ -1131,7 +1131,7 @@
     "temp_wind = pre.subset_df(accidents_df_russ, ['Temperature(F)', 'Wind_Speed(mph)'])\n",
     "pre.OLS(temp_wind, np.array(accidents_df_russ['Wind_Chill(F)']))\n",
     "\n",
-    "accidents_df_russ['Wind_Chill(F)'].fillna((accidents_df_russ['Temperature(F)']*1.0778 + accidents_df_russ['Wind_Speed(mph)']*-0.7083), inplace=True)\n",
+    "accidents_df_russ = accidents_df_russ['Wind_Chill(F)'].fillna((accidents_df_russ['Temperature(F)']*1.0778 + accidents_df_russ['Wind_Speed(mph)']*-0.7083))\n",
     "\n",
     "print('Percent of missing rows by column', '\\n\\n', accidents_df_russ.isnull().sum()/len(accidents_df_russ))\n",
     "\n",
@@ -1188,11 +1188,103 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns to reduce using PCA:  ['Start_Lat', 'Start_Lng', 'Distance(mi)', 'Temperature(F)', 'Wind_Chill(F)', 'Humidity(%)', 'Pressure(in)', 'Visibility(mi)', 'Wind_Speed(mph)', 'Precipitation(in)', 'Severity']\n",
+      "Number of columns:  11\n",
+      "Start_Lat                0\n",
+      "Start_Lng                0\n",
+      "Distance(mi)             0\n",
+      "Temperature(F)         920\n",
+      "Wind_Chill(F)        33760\n",
+      "Humidity(%)            962\n",
+      "Pressure(in)           936\n",
+      "Visibility(mi)         897\n",
+      "Wind_Speed(mph)       9352\n",
+      "Precipitation(in)    34019\n",
+      "Severity                 0\n",
+      "dtype: int64\n",
+      "         Start_Lat   Start_Lng  Distance(mi)  Temperature(F)  Wind_Chill(F)  \\\n",
+      "98138    33.662770 -111.999580         0.238            59.0            NaN   \n",
+      "98139    33.668760 -112.072750         0.820            59.0            NaN   \n",
+      "98141    33.484250 -112.113190         0.645            60.1            NaN   \n",
+      "98142    33.295215 -111.972420         0.466            60.1            NaN   \n",
+      "98146    33.461900 -112.092145         0.397            57.9            NaN   \n",
+      "...            ...         ...           ...             ...            ...   \n",
+      "1440385  41.658130  -87.587080         0.076            73.4            NaN   \n",
+      "1440395  41.875430  -87.672740         0.482            75.0            NaN   \n",
+      "1440401  41.912990  -87.666640         0.329            73.0            NaN   \n",
+      "1440403  41.761690  -87.625890         0.244            72.0            NaN   \n",
+      "1440830  41.879961  -87.645910         0.239            62.1            NaN   \n",
+      "\n",
+      "         Humidity(%)  Pressure(in)  Visibility(mi)  Wind_Speed(mph)  \\\n",
+      "98138           20.0         29.99            10.0              3.5   \n",
+      "98139           20.0         29.99            10.0              3.5   \n",
+      "98141           20.0         29.96            10.0              4.6   \n",
+      "98142           20.0         29.96            10.0              4.6   \n",
+      "98146           22.0         29.95            10.0              5.8   \n",
+      "...              ...           ...             ...              ...   \n",
+      "1440385         61.0         30.05            10.0             11.5   \n",
+      "1440395         66.0         30.01             9.0              8.1   \n",
+      "1440401         73.0         30.02             9.0             10.4   \n",
+      "1440403         73.0         30.01             9.0             10.4   \n",
+      "1440830         93.0         30.05             6.0              3.5   \n",
+      "\n",
+      "         Precipitation(in)  Severity  \n",
+      "98138                  NaN         3  \n",
+      "98139                  NaN         2  \n",
+      "98141                  NaN         2  \n",
+      "98142                  NaN         2  \n",
+      "98146                  NaN         2  \n",
+      "...                    ...       ...  \n",
+      "1440385                NaN         2  \n",
+      "1440395                NaN         3  \n",
+      "1440401                NaN         3  \n",
+      "1440403                NaN         3  \n",
+      "1440830                NaN         2  \n",
+      "\n",
+      "[37458 rows x 11 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### --- Kostas's Code --- ###\n",
+    "\n",
+    "# Create a copy of the df\n",
+    "accidents_df_kos = accidents_df_isolated.copy()\n",
+    "numerical_cols = accidents_df_kos.describe().columns\n",
+    "\n",
+    "exclude_cols = ['ID', 'Country', 'State', 'Number', 'Zipcode', \n",
+    "                'Airport_Code', 'End_Lat', 'End_Lng', ]\n",
+    "cols_ordered = [col for col in numerical_cols if col!='Severity' and col not in exclude_cols] + ['Severity']\n",
+    "print(\"Columns to reduce using PCA: \", cols_ordered)\n",
+    "accidents_df_kos = accidents_df_kos[cols_ordered]\n",
+    "print(\"Number of columns: \", len(accidents_df_kos.columns))\n",
+    "# Check for Nulls\n",
+    "print( accidents_df_kos.isna().sum())\n",
+    "\n",
+    "# Export to Numpy\n",
+    "# accidents_np_kos = accidents_df_kos.to_numpy()\n",
+    "# print(\"Type of exported Numpy array: \", accidents_np_kos.dtype)\n",
+    "# Run PCA\n",
+    "# pca = pre.PCA()\n",
+    "# pca.fit(data=accidents_np_kos, max_error=0.1)\n",
+    "# accidents_np_kos = pca.transform(data=accidents_np_kos)\n",
+    "# print(\"Number of columns (after PCA): \", len(accidents_df_kos.columns))"
+   ]
   },
   {
    "cell_type": "markdown",
