Fixed PCA complex-number problem #4

--- a/main.ipynb
+++ b/main.ipynb
@@ -100,7 +100,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f843e1a43a14542a4c679d7cacb495c",
+       "model_id": "63a0ab766371481a9e4d154581357343",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,7 +160,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f16d7d7a500443b7a8e0e3c34c58cadc",
+       "model_id": "077df3b088f5424e838627b1f8f076a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "id": "-z773EjNgSdk"
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -298,8 +298,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-11-17 14:46:43 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /Users/gkos/Insync/delfinas7kostas@gmail.com/Google Drive/Projects/UTK/accident-severity-detection-prediction/confs/prototype1.yml\u001b[0m\n",
-      "2021-11-17 14:46:43 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: prototype_1\u001b[0m\n"
+      "2021-11-18 10:58:01 Config       INFO     \u001b[1m\u001b[37mConfiguration file loaded successfully from path: /Users/gkos/Insync/delfinas7kostas@gmail.com/Google Drive/Projects/UTK/accident-severity-detection-prediction/confs/prototype1.yml\u001b[0m\n",
+      "2021-11-18 10:58:01 Config       INFO     \u001b[1m\u001b[37mConfiguration Tag: prototype_1\u001b[0m\n"
      ]
     }
    ],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "id": "CuYpT_rqgSdl"
    },
@@ -366,8 +366,8 @@
       "mkdir: /Users/gkos/.kaggle: File exists\n",
       "mkdir: data: File exists\n",
       "Downloading us-accidents.zip to /Users/gkos/Insync/delfinas7kostas@gmail.com/Google Drive/Projects/UTK/accident-severity-detection-prediction/data\n",
-      "100%|███████████████████████████████████████▊| 117M/117M [00:10<00:00, 11.7MB/s]\n",
-      "100%|████████████████████████████████████████| 117M/117M [00:10<00:00, 12.0MB/s]\n",
+      "100%|███████████████████████████████████████▊| 117M/117M [00:10<00:00, 9.88MB/s]\n",
+      "100%|████████████████████████████████████████| 117M/117M [00:10<00:00, 11.6MB/s]\n",
       "Archive:  us-accidents.zip\n",
       "  inflating: US_Accidents_Dec20_updated.csv  \n"
      ]
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "id": "qpxXezwmgSdm"
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "id": "gRUrrWe7gSdq"
    },
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "id": "jidzZ38HgSds"
    },
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -1039,13 +1039,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-11-17 15:18:58 Preprocessing INFO     \u001b[1m\u001b[32m                                 OLS Regression Results                                \n",
+      "2021-11-18 10:58:31 Preprocessing INFO     \u001b[1m\u001b[32m                                 OLS Regression Results                                \n",
       "=======================================================================================\n",
       "Dep. Variable:                      y   R-squared (uncentered):                   0.999\n",
       "Model:                            OLS   Adj. R-squared (uncentered):              0.999\n",
       "Method:                 Least Squares   F-statistic:                          2.042e+07\n",
-      "Date:                Wed, 17 Nov 2021   Prob (F-statistic):                        0.00\n",
-      "Time:                        15:18:58   Log-Likelihood:                     -1.2984e+05\n",
+      "Date:                Thu, 18 Nov 2021   Prob (F-statistic):                        0.00\n",
+      "Time:                        10:58:31   Log-Likelihood:                     -1.2984e+05\n",
       "No. Observations:               56661   AIC:                                  2.597e+05\n",
       "Df Residuals:                   56659   BIC:                                  2.597e+05\n",
       "Df Model:                           2                                                  \n",
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1242,58 +1242,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-11-18 10:58:51 Preprocessing INFO     \u001b[1m\u001b[32m!!!!!\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "!!!!!!!!!!!!!!!!!!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<project_libs.project.preprocessing.PCA2 at 0x7fd799fb46a0>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pre.PCA2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-11-18 11:03:36 Preprocessing INFO     \u001b[1m\u001b[32mFor # dims=17 error=0.009623888269503444 <= 0.01\u001b[0m\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Number of columns to reduce using PCA (only numerical ones):  142\n",
       "\n",
-      "Null values per column:\n",
-      "Temperature(F)                              0\n",
-      "Wind_Chill(F)                               0\n",
-      "Humidity(%)                                 0\n",
-      "Pressure(in)                                0\n",
-      "Visibility(mi)                              0\n",
-      "                                           ..\n",
-      "Weather_Condition_Thunderstorm              0\n",
-      "Weather_Condition_Thunderstorms and Rain    0\n",
-      "Weather_Condition_Widespread Dust           0\n",
-      "Weather_Condition_Wintry Mix                0\n",
-      "Weather_Condition_Wintry Mix / Windy        0\n",
-      "Length: 142, dtype: int64\n",
-      "\n",
-      "Type of exported Numpy array:  float64\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-11-17 15:33:36 Preprocessing INFO     \u001b[1m\u001b[32mFor # dims=17 error=(0.009623888269503444+0j) <= 0.01\u001b[0m\n",
-      "/Users/gkos/Insync/delfinas7kostas@gmail.com/Google Drive/Projects/UTK/accident-severity-detection-prediction/project_libs/project/preprocessing.py:277: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  return dataset[:, :-1], dataset[:, -1].astype(int)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 141 is different from 17)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/t2/m3k1zxzn3ml89m89sc02b7_80000gn/T/ipykernel_84465/3513756994.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mpca\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPCA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mpca\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX_train_PCA_np\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_error\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.01\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mX_train_PCA_np\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpca\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maccidents_np_kos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0mX_test_PCA_np\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpca\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX_test_PCA_np\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Insync/delfinas7kostas@gmail.com/Google Drive/Projects/UTK/accident-severity-detection-prediction/project_libs/project/preprocessing.py\u001b[0m in \u001b[0;36mtransform\u001b[0;34m(self, data, split)\u001b[0m\n\u001b[1;32m    267\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    268\u001b[0m             \u001b[0mdata_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 269\u001b[0;31m         \u001b[0mdata_x_proj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_x\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbasis_vector\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    270\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msplit\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    271\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_x_proj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_y\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnewaxis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 141 is different from 17)"
+      "Type of exported Numpy arrays:  float64 float64\n",
+      "float64\n",
+      "float64\n",
+      "float64\n",
+      "float64\n",
+      "float64\n"
      ]
     }
    ],
    "source": [
     "### --- Kostas's Code --- ###\n",
     "\n",
-    "# Create a copy of the df\n",
+    "# Create a copy of the dfs\n",
     "X_train_PCA = X_train.copy()\n",
     "X_test_PCA = X_test.copy()\n",
     "\n",
@@ -1302,33 +1313,60 @@
     "print(\"Number of columns to reduce using PCA (only numerical ones): \", len(numerical_cols))\n",
     "\n",
     "# Check for Nulls\n",
-    "print(\"\\nNull values per column:\")\n",
-    "print(X_train_PCA[numerical_cols].isna().sum())\n",
+    "# print(\"\\nNull values per column:\")\n",
+    "# print(X_train_PCA[numerical_cols].isna().sum())\n",
     "\n",
     "# Export to Numpy\n",
     "X_train_PCA_np = X_train_PCA[numerical_cols].to_numpy()\n",
     "X_test_PCA_np = X_test_PCA[numerical_cols].to_numpy()\n",
-    "print(\"\\nType of exported Numpy array: \", X_train_PCA_np.dtype)\n",
+    "print(\"\\nType of exported Numpy arrays: \", X_train_PCA_np.dtype, X_test_PCA_np.dtype)\n",
     "\n",
     "# Run PCA\n",
     "pca = pre.PCA()\n",
     "pca.fit(data=X_train_PCA_np, max_error=0.01)\n",
     "X_train_PCA_np = pca.transform(data=X_train_PCA_np)\n",
-    "X_test_PCA_np = pca.transform(data=X_test_PCA_np)\n",
-    "\n",
+    "# X_test_PCA_np = pca.transform(data=X_test_PCA_np)\n",
     "# Drop the reduces columns from DF\n",
-    "X_train_PCA = X_train_PCA.drop(numerical_cols, axis=1)\n",
-    "X_test_PCA = X_test_PCA.drop(numerical_cols, axis=1)\n",
+    "# X_train_PCA = X_train_PCA.drop(numerical_cols, axis=1)\n",
+    "# X_test_PCA = X_test_PCA.drop(numerical_cols, axis=1)\n",
     "\n",
-    "# Add the new (reduced) columns to the Dataframe\n",
-    "num_new_cols = X_train_PCA_np.shape[1]\n",
-    "new_col_names = [f\"PCA_{ind}\" for ind in range(num_new_cols)]\n",
-    "X_train_PCA[new_col_names] = X_train_PCA_np\n",
-    "X_test_PCA[new_col_names] = X_test_PCA_np\n",
+    "# # Add the new (reduced) columns to the Dataframe\n",
+    "# num_new_cols = X_train_PCA_np.shape[1]\n",
+    "# new_col_names = [f\"PCA_{ind}\" for ind in range(num_new_cols)]\n",
+    "# X_train_PCA[new_col_names] = X_train_PCA_np\n",
+    "# X_test_PCA[new_col_names] = X_test_PCA_np\n",
     "\n",
-    "# Print New columns\n",
-    "print(\"\\nNumber of columns (after PCA): \", len(X_train_PCA.describe().columns))\n",
-    "print(\"\\nColumns: \", X_train_PCA.columns)"
+    "# # Print New columns\n",
+    "# print(\"\\nNumber of columns (after PCA): \", len(X_train_PCA.describe().columns))\n",
+    "# print(\"\\nColumns: \", X_train_PCA.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperature(F)                              float64\n",
+      "Wind_Chill(F)                               float64\n",
+      "Humidity(%)                                 float64\n",
+      "Pressure(in)                                float64\n",
+      "Visibility(mi)                              float64\n",
+      "                                             ...   \n",
+      "Weather_Condition_Thunderstorm                uint8\n",
+      "Weather_Condition_Thunderstorms and Rain      uint8\n",
+      "Weather_Condition_Widespread Dust             uint8\n",
+      "Weather_Condition_Wintry Mix                  uint8\n",
+      "Weather_Condition_Wintry Mix / Windy          uint8\n",
+      "Length: 142, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_test_PCA.dtypes)"
    ]
   },
   {
@@ -1342,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1459,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
