Added NN class my timeit custom library #7

--- a/main.ipynb
+++ b/main.ipynb
@@ -15,6 +15,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "id": "eiRSeV6fi8A0"
    },
    "source": [
@@ -62,6 +63,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "id": "1Nl39AXjgSdg"
    },
    "source": [
@@ -87,6 +89,7 @@
       "0cd02d53c0e144799b710e29332c2f7b"
      ]
     },
+    "hidden": true,
     "id": "1SQIWYWmi8A4",
     "outputId": "66fdab2d-8d71-4ead-ecda-a4ec2682d195"
    },
@@ -152,6 +155,7 @@
       "d4a84f30f7464677a2da3a4498a13aa2"
      ]
     },
+    "hidden": true,
     "id": "F_l8p4H1i8A5",
     "outputId": "25569239-f58d-4ac5-e940-071a75e342bf"
    },
@@ -203,6 +207,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "id": "6CpeQfTli8A6"
    },
    "source": [
@@ -222,6 +227,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "id": "h54edY45gSdj"
    },
    "source": [
@@ -231,6 +237,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "id": "H1RHGfh1i8A8",
     "pycharm": {
      "name": "#%%\n"
@@ -251,6 +258,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "hidden": true,
     "id": "wjKYGxzYi8A9",
     "outputId": "2b3c3672-17ee-47f4-b2ef-28081edf10c9"
    },
@@ -289,6 +297,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
+    "hidden": true,
     "id": "PYBmLhFZgSdk"
    },
    "source": [
@@ -303,6 +313,7 @@
      "end_time": "2021-12-02T02:33:31.110991Z",
      "start_time": "2021-12-02T02:33:31.073976Z"
     },
+    "hidden": true,
     "id": "-z773EjNgSdk"
    },
    "outputs": [],
@@ -321,6 +332,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "hidden": true,
     "id": "XYH2o7w3i8A-",
     "outputId": "39ab58db-be99-4ff8-95db-d6365411e5d6"
    },
@@ -383,6 +395,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "id": "OhlCQKWpg4Et"
    },
    "source": [
@@ -400,6 +413,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "hidden": true,
     "id": "MVRVJ0-6_R4t",
     "outputId": "4f782923-d473-464e-d539-71587af61934"
    },
@@ -438,6 +452,7 @@
      "end_time": "2021-12-02T02:34:04.909811Z",
      "start_time": "2021-12-02T02:33:57.550059Z"
     },
+    "hidden": true,
     "id": "qpxXezwmgSdm"
    },
    "outputs": [],
@@ -450,6 +465,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "id": "NZ9xyLsV_R4v"
    },
    "source": [
@@ -459,6 +475,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "id": "aKazCmez_R4v"
    },
    "source": [
@@ -473,6 +490,7 @@
      "end_time": "2021-12-02T02:34:04.943049Z",
      "start_time": "2021-12-02T02:34:04.910949Z"
     },
+    "hidden": true,
     "id": "FUhRKjPO_R4v"
    },
    "outputs": [
@@ -511,6 +529,7 @@
      "end_time": "2021-12-02T02:34:06.334732Z",
      "start_time": "2021-12-02T02:34:04.944726Z"
     },
+    "hidden": true,
     "id": "WXFdXiqz_R4w"
    },
    "outputs": [
@@ -554,6 +573,7 @@
      "end_time": "2021-12-02T02:34:08.474931Z",
      "start_time": "2021-12-02T02:34:06.335588Z"
     },
+    "hidden": true,
     "id": "x6vKUXk-_R4x"
    },
    "outputs": [
@@ -596,6 +616,7 @@
      "end_time": "2021-12-02T02:34:08.757161Z",
      "start_time": "2021-12-02T02:34:08.475868Z"
     },
+    "hidden": true,
     "id": "N9uVOifl_R4x"
    },
    "outputs": [
@@ -635,6 +656,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "id": "SJhWGaFO_R4y"
    },
    "source": [
@@ -649,6 +671,7 @@
      "end_time": "2021-12-02T02:34:08.779245Z",
      "start_time": "2021-12-02T02:34:08.758077Z"
     },
+    "hidden": true,
     "id": "VEwL6ac2_R4y"
    },
    "outputs": [],
@@ -668,6 +691,7 @@
      "base_uri": "https://localhost:8080/",
      "height": 606
     },
+    "hidden": true,
     "id": "0A9_ORtr_R4y",
     "outputId": "2c10c210-3011-4cbd-843c-12c9f613905d"
    },
@@ -702,6 +726,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "id": "i_R2mcmqgSdq"
    },
    "source": [
@@ -716,6 +741,7 @@
      "end_time": "2021-12-02T02:34:10.794049Z",
      "start_time": "2021-12-02T02:34:10.774150Z"
     },
+    "hidden": true,
     "id": "gRUrrWe7gSdq"
    },
    "outputs": [],
@@ -735,6 +761,7 @@
      "base_uri": "https://localhost:8080/",
      "height": 929
     },
+    "hidden": true,
     "id": "jidzZ38HgSds",
     "outputId": "2f3b51b3-54f6-465f-afd3-855e154d58aa"
    },
@@ -1145,6 +1172,7 @@
      "end_time": "2021-12-02T02:37:13.633045Z",
      "start_time": "2021-12-02T02:34:12.124435Z"
     },
+    "hidden": true,
     "id": "iRzRvtxY_R40",
     "scrolled": true
    },
@@ -1256,6 +1284,7 @@
      "end_time": "2021-12-02T02:37:14.768393Z",
      "start_time": "2021-12-02T02:37:13.634754Z"
     },
+    "hidden": true,
     "id": "1GHd-p-6_R40"
    },
    "outputs": [
@@ -1340,6 +1369,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "id": "lI2avh0G_R41"
    },
    "source": [
@@ -1357,6 +1387,7 @@
      "end_time": "2021-12-02T02:37:15.283489Z",
      "start_time": "2021-12-02T02:37:14.769409Z"
     },
+    "hidden": true,
     "id": "dWT86ui6_R42"
    },
    "outputs": [
@@ -1447,6 +1478,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "id": "LF2TpLm6_R43"
    },
    "source": [
@@ -1461,6 +1493,7 @@
      "end_time": "2021-12-02T02:37:15.305922Z",
      "start_time": "2021-12-02T02:37:15.284398Z"
     },
+    "hidden": true,
     "id": "q3FaU-mm_R43"
    },
    "outputs": [],
@@ -1476,6 +1509,7 @@
      "end_time": "2021-12-02T20:07:35.640964Z",
      "start_time": "2021-12-02T20:07:35.592820Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1806,6 +1840,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Tune BPNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "ftG2GlOD_R45"
    },
@@ -1862,6 +1910,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "id": "4e7XVFjU_R45"
    },
    "source": [
@@ -1875,7 +1924,8 @@
     "ExecuteTime": {
      "end_time": "2021-12-02T03:04:25.036427Z",
      "start_time": "2021-12-02T03:04:25.036419Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1902,7 +1952,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     " ### 3. Train Bayesian"
    ]
@@ -1914,7 +1966,8 @@
     "ExecuteTime": {
      "end_time": "2021-12-02T20:50:57.809635Z",
      "start_time": "2021-12-02T20:50:57.752514Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
